fixed filter buton spacing

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -16,12 +16,16 @@ th, tr{
     width: 100% !important;
 }
 .row.no-pad {
-  margin-right:0;
-  margin-left:0;
+  margin-right:1px;
+  margin-left:1px;
+  margin-bottom:1px;
+  margin-top: 1px;
 }
 .row.no-pad > [class*='col-'] {
-  padding-right:0;
-  padding-left:0;
+  padding-right:1px;
+  padding-left:1px;
+  margin-bottom: 1px;
+  margin-top: 1px;
 }
 
 
